--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
     <meta charset="UTF-8" />
+     <!--CSS Stylesheet link-->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <!--Website Title-->
+    <title>Horiseon</title>
 </head>
 
 <body>
+    <!--Navigation bar-->
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
@@ -24,7 +27,9 @@
             </ul>
         </div>
     </div>
+    <!--Large Middle image-->
     <div class="hero"></div>
+    <!--Key content section-->
     <div class="content">
         <div class="content-attributes">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Picture of SEO mind map on notebook" class="float-left" />
@@ -48,6 +53,7 @@
             </p>
         </div>
     </div>
+    <!--Key benefits section-->
     <div class="benefits">
         <div class="benefit-attributes">
             <h3>Lead Generation</h3>
@@ -71,6 +77,7 @@
             </p>
         </div>
     </div>
+    <!--Footer-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
