Improved navigation bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <!--CSS Stylesheet link-->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!--Website Title-->
-    <title>Horiseon</title>
+    <title>Horiseon Search Engine Optimisation</title>
 </head>
 
 <body>
